# myFTP

./: CMakeLists.txt  README.md  conf  main.cpp  server.cpp  server.h  shell.nix
